--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+.wrap {
+  max-width: 425px;
+  min-width: 300px;
+  margin: auto;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.headerWrap {
+  width: 100%;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bannerWrap {
+  height: 250px;
+  padding: 13px 0 0;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #fff;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.contentsWrap {
+  width: 100%;
+  height: 615px;
+  background-color: #fff;
 }
