--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  outline: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  /* touch-action: pan-y; */
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: -0.02em;
+  background-color: #f6f6f6;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+input,
+button {
+  appearance: none;
+}
+
+ul {
+  list-style-type: none;
+}
+
+div,
+p,
+span,
+a,
+input,
+textarea,
+button,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+th,
+td {
+  font-family: 'Spoqa Han Sans Neo', sans-serif;
+  color: #333;
 }
