--- a/src/components/layout/Footer/index.module.css
+++ b/src/components/layout/Footer/index.module.css
@@ -2,13 +2,13 @@
   width: 100%;
   max-width: 425px;
   height: 60px;
-  position: fixed;
-  bottom: 0;
-  background-color: rgba(65, 147, 147, 0.834);
-  backdrop-filter: blur(3px);
   border: none;
   cursor: pointer;
+  position: fixed;
+  bottom: 0;
+  backdrop-filter: blur(3px);
   border-radius: 1rem 1rem 0 0;
+  background-color: var(--color-point-1);
 }
 
 .footerDiv img {
@@ -16,6 +16,6 @@
   height: 1rem;
 }
 .footerDiv p {
-  font-size: 15px;
-  font-weight: 700;
+  font-size: var(--font-size-15);
+  font-weight: bold;
 }
