--- a/src/components/layout/ListPage/index.module.css
+++ b/src/components/layout/ListPage/index.module.css
@@ -1,14 +1,14 @@
 .listPageWrap {
   width: 100%;
   padding: 20px;
-  background-color: #ebebeb;
+  background-color: var(--color-gray-e);
   overflow: hidden;
   overflow-y: auto;
 }
 .curations {
   font-size: 15px;
   font-weight: bold;
-  color: #333;
+  color: var(--color-gray-3);
   margin-bottom: 10px;
 }
 .contntsUl {
@@ -22,8 +22,8 @@
   display: flex;
   gap: 10px;
   align-items: center;
-  background-color: #fff;
-  border-radius: 0.4rem;
+  background-color: var(--color-white);
+  border-radius: var(--border-radius-4);
   /* overflow: hidden; */
   position: relative;
 }
@@ -31,8 +31,8 @@
   min-width: 60px;
   max-width: 60px;
   height: 60px;
-  border-radius: 0.4rem;
-  background-color: #aaa;
+  border-radius: var(--border-radius-4);
+  /* color: var(--color-gray-a); */
   object-fit: cover;
 }
 .textBox {
@@ -45,17 +45,17 @@
 }
 .contents {
   font-size: 12px;
-  color: #666;
+  border-radius: var(--border-radius-6);
 }
 .contentWrap {
   width: 80%;
 }
 .contentTitle {
-  font-size: 15px;
+  font-size: var(--font-size-15);
   font-weight: bold;
-  white-space: nowrap;
+  /* white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
+  text-overflow: ellipsis; */
 }
 .contenCount {
   width: 30px;
@@ -67,6 +67,6 @@
   align-items: center;
 }
 .rankWrap p {
-  font-size: 18px;
+  font-size: var(--font-size-18);
   font-weight: bold;
 }
