--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: -0.02em;
-  background-color: #f6f6f6;
+  background-color: var(--color-bg);
 }
 
 a {
