--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,10 @@
 }
 
 body {
-  /* touch-action: pan-y; */
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: -0.02em;
-  background-color: var(--color-bg);
+  background-color: var(--color-gray-f);
 }
 
 a {
@@ -21,6 +20,9 @@ a {
 input,
 button {
   appearance: none;
+}
+button{
+  cursor: pointer;
 }
 
 ul {
