--- a/src/components/common/Banner/BannerCard/index.module.css
+++ b/src/components/common/Banner/BannerCard/index.module.css
@@ -9,18 +9,20 @@
   box-shadow: 0 4px 8px rgba(85, 85, 85, 0.1);
 }
 .bannerImage {
+  width: 100%;
   object-fit: cover;
   height: 142px;
 }
 .onProgress {
-  background-color: var(--color-point-1);
+  background-color: var(--color-point-4);
+  color: var(--color-white);
 }
 .finished {
   background-color: var(--color-gray-e);
 }
 .progress {
   width: 45px;
-  height: 21px;
+  height: 23px;
   border-radius: var(--border-radius-4);
   font-size: var(--font-size-13);
   font-weight: bold;
@@ -51,12 +53,20 @@
 .bannerTitle button {
   width: 63px;
   height: 20px;
-  cursor: pointer;
-  font-size: var(--font-size-10);
-  background-color: var(--color-white);
-  border: 1px solid var(--color-point-1);
+  font-size: var(--font-size-12);
   border-radius: 1rem;
 }
+
+.btn_on {
+  background-color: var(--color-white);
+  border: 1.5px solid var(--color-point-4);
+}
+.btn_off {
+  background-color: var(--color-gray-d);
+  border: none;
+  color: var(--color-gray-9);
+}
+
 .bannerDate {
   width: 100%;
   font-size: var(--font-size-12);
