--- a/src/components/common/Banner/index.module.css
+++ b/src/components/common/Banner/index.module.css
@@ -2,11 +2,10 @@
   height: 250px;
   padding: 13px 0 0;
   display: flex;
-  background-color: var(--color-white);
+  background-color: var(--color-bg);
 }
 
 .slideWrap {
   width: 100%;
-  background-color:var(--color-white);
   --swiper-theme-color: var(--color-point-1);
 }
