--- a/src/components/layout/Footer/index.module.css
+++ b/src/components/layout/Footer/index.module.css
@@ -3,12 +3,12 @@
   max-width: 425px;
   height: 60px;
   border: none;
-  cursor: pointer;
   position: fixed;
   bottom: 0;
+  z-index: 999;
   backdrop-filter: blur(3px);
   border-radius: 1rem 1rem 0 0;
-  background-color: var(--color-point-1);
+  background-color: #ffb0b379;
 }
 
 .footerDiv img {
@@ -18,4 +18,5 @@
 .footerDiv p {
   font-size: var(--font-size-15);
   font-weight: bold;
+  color: var(--color-point-1);
 }
