Component separation and overall code refactoring.
* Banners
- 배너내부 이미지 카드 통합
1) 배너 디자인 별로 분리 되어있었음
2) 분리 된 배너 카드의 역할은 동일 하므로 한 개의 컴포넌트에서, 타이틀과 버튼등을 조합하여 사용할 수 있도록 개선
3) 외부 이동외에도 내부 이동이 가능하도록 개선 (<Link> 추가 및 외부 링크임을 확인하는 코드 추가)
4) 버튼, 상태, 기간을 자유롭게 작성 할 수있도록 개선
- 기간을 표시하는 부분은 꼭 기간 뿐 아니라 부가 설명이 올 수 있다고 생각 함
- 버튼이나 상태 또한, 지정된 텍스트가 아닌 '투표하기', '참여하기'등 달라 질 수 있으므로 텍스트를 직접 받을 수 있도록 함

* List
- 리스트 컴포넌트 명을 명확하게 구분 할 수 있도록 변경 (ex. List Page : 리스트 컴포넌트는 페이지가 아닌, 리스트를 만드는 컴포넌트이므로, List로 변경)
- 아이템은 기본적인 리스트와 이미지를 표현 할 수 있음
- List의 역할은 무한 스크롤에 집중, 다른 컴포넌트를 추가로 삽입하여 무한 스크롤로 리스트를 만들 수 있도록 함

* Top Button, Header
- 무한 스크롤의 특성상 위로 올라가는 버튼 필요
- 헤더 네비게이션도 보여야 한다고 생강
- 스크롤바가 내려갈 땐 헤더와 탑버튼을 사라지게 하고, 위로 올라갈경우 헤더와 탑버튼을 표시 하도록 함

* Tab Menu
- 탭메뉴는 페이지 이동을 하지 않고, 내부에서 데이터만 불러와 처리하도록 함
- 탭메뉴 사용시, 타이틀은 선택적으로 사용가능 (타이틀이 비어있으면 탭메뉴만 활성화 됨)

* 각 페이지에서 탭메뉴, 배너를 추가/제거 가능
* Test용 데이터 파일로 분리 (기존: 각페이지에서 직접 데이터 사용)

--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   --color-point-1: #002140;
   --color-point-2: #ffdbdc;
   --color-point-3: #ffb0b2;
-  --color-point-4: #EA477D;
+  --color-point-4: #ea477d;
 
   --border-radius-3: 0.3rem;
   --border-radius-4: 0.4rem;
@@ -41,12 +41,13 @@
   min-width: 300px;
   height: 900px;
   margin: auto;
-  /* overflow-y: auto; */
+  background-color: var(--color-bg);
 }
 
 .contentsWrap {
   width: 100%;
-  height: 615px;
+  min-height: 800px;
+  padding-top: 45px;
 }
 .text_overflow {
   white-space: nowrap;
@@ -68,6 +69,15 @@
   align-items: center;
   justify-content: space-around;
 }
-.displayNone {
-  display: none;
+.flex_column_between {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.flex_column_center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
