--- a/src/layout/List/index.module.css
+++ b/src/layout/List/index.module.css
@@ -4,11 +4,18 @@
   background-color: var(--color-white);
 }
 .categoryBox {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   gap: 20px;
 }
 .categoryName {
   font-weight: bold;
   font-size: var(--font-size-20);
   color: var(--color-point-1);
+}
+.subtitleWrap {
+  width: 100%;
+  padding: 3px 6px;
+  font-size: var(--font-size-12);
+  background-color: var(--color-gray-e);
+  margin-bottom: 20px;
 }
