--- a/src/layout/List/index.module.css
+++ b/src/layout/List/index.module.css
@@ -4,7 +4,7 @@
   background-color: var(--color-white);
 }
 .categoryBox {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
   gap: 20px;
 }
 .categoryName {
@@ -16,6 +16,6 @@
   width: 100%;
   padding: 3px 6px;
   font-size: var(--font-size-12);
-  background-color: var(--color-gray-e);
+  border-bottom: 1px solid var(--color-gray-e);
   margin-bottom: 20px;
 }
